--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "17.0.14",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
 }
