--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "airbnb"
   ],
   "rules": {
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [2, { "extensions": [",.js", ".jsx", ".ts", ".tsx"] }],
     "import/prefer-default-export": "off",
     "import/extensions": [
@@ -25,6 +26,7 @@
     "@typescript-eslint/no-use-before-define": ["error"],
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "@next/next/no-html-link-for-pages": "off"
   }
 }
