--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.30.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-next": "11.0.1",
