Fix build failed

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,10 @@
     "prettier",
     "airbnb"
   ],
+  "env": {
+    "browser": true,
+    "node": true,
+  },
   "rules": {
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [2, { "extensions": [",.js", ".jsx", ".ts", ".tsx"] }],
